--- a/index.html
+++ b/index.html
@@ -83,71 +83,7 @@
 
             <h2 class="headline-sm" data-title>Happy Moments (Master)</h2>
 
-            <p class="label-lg label-wrapper wrapper">
-              <span data-album>No Spirit</span>
-
-              <span data-year>2022</span>
-            </p>
-
-            <p class="label-md artist" data-artist>No Spirit x Tonion</p>
-
-            <div class="seek-control">
-
-              <div>
-                <div class="range-wrapper">
-                  <input type="range" step="1" max="60" value="0" class="range" data-range data-seek>
-
-                  <div class="range-fill" data-range-fill></div>
-                </div>
-
-                <div class="duration-label wrapper">
-                  <span class="label-md" data-running-time>0:00</span>
-
-                  <span class="label-md" data-duration>1:00</span>
-                </div>
-              </div>
-
-              <div class="volume">
-                <button class="btn-icon" data-volume-btn>
-                  <span class="material-symbols-rounded">volume_up</span>
-                </button>
-
-                <div class="range-wrapper">
-                  <input type="range" step="0.05" max="1" value="1" class="range" data-range data-volume>
-
-                  <div class="range-fill" data-range-fill></div>
-                </div>
-              </div>
-
-            </div>
-
-            <div class="player-control wrapper">
-
-              <button class="btn-icon toggle" data-repeat>
-                <span class="material-symbols-rounded default-icon">repeat</span>
-                <span class="material-symbols-rounded active-icon">repeat_one</span>
-              </button>
-
-              <button class="btn-icon" data-skip-prev>
-                <span class="material-symbols-rounded">skip_previous</span>
-              </button>
-
-              <button class="btn-icon play" data-play-btn>
-                <span class="material-symbols-rounded default-icon">play_arrow</span>
-                <span class="material-symbols-rounded active-icon">pause</span>
-              </button>
-
-              <button class="btn-icon" data-skip-next>
-                <span class="material-symbols-rounded">skip_next</span>
-              </button>
-
-              <button class="btn-icon toggle" data-shuffle>
-                <span class="material-symbols-rounded">shuffle</span>
-              </button>
-
-            </div>
-
-            <div data-lyrics></div>
+            <div data-lyrics class="lyrics-container"></div>
 
           </div>
 
